maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:46: error: ';' expected but ',' found.
  var xModDir = {0, 1, 0, -1};
                  ^ShortestPathMaze:47: error: ';' expected but ',' found.
  var yModDir = {1, 0, -1, 0}
                  ^